# c_exec

./: .gitignore  Makefile  clib.json  dev.sh  meson.build
include/: deps.h  module_imports.h
src/: deps.c  exec.c
tests/: flag_subcommands.c  test_exec1.c  test_reproc1.c
